# Visual_Algorithm

./: README.md
1_understanding_the_dataset/: understanding_NEU_YOLO.py  understanding_camvid.py  understanding_imagenet1k.py
C++/loading_and_understanding_dataset/VOC_datasets/: CMakeLists.txt  main.cpp
picture_video_what_it_is/deep_learning_model_algorithm/: object_detetion.py
picture_video_what_it_is/visual_algorithm_website/: db.sqlite3  manage.py
picture_video_what_it_is/visual_algorithm_website/main_interface/: urls.py  views.py
picture_video_what_it_is/visual_algorithm_website/main_interface/templates/: home.html
picture_video_what_it_is/visual_algorithm_website/visual_algorithm_website/: asgi.py  settings.py  urls.py  wsgi.py
